# libini

./: .gitignore  CMakeLists.txt  Errors.md  README.md  libini.cpp  libini.hpp  test.cpp  test.ini
doc/: apis.md
include/libini/: Error.hpp  libini.hpp  libini_wrapper.h
src/: Error.cpp  Ini.cpp  IniMgr.cpp  Section.cpp  libini_wrapper.cpp
test/: test.cpp  test.ini
